--- a/Chapter3.3_Movie.ipynb
+++ b/Chapter3.3_Movie.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "a5fc86d3",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "712ad04a",
    "metadata": {},
    "outputs": [
@@ -160,7 +160,7 @@
        "4        1      2355       5  978824291"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "e06bf9c4",
    "metadata": {},
    "outputs": [
@@ -245,7 +245,7 @@
        "4         5  Father of the Bride Part II (1995)                        Comedy"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "83205504",
    "metadata": {},
    "outputs": [
@@ -342,7 +342,7 @@
        "4        5      M   25          20   55455"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "0b1a3149",
    "metadata": {},
    "outputs": [
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "371f733a",
    "metadata": {},
    "outputs": [],
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "e0ef3c91",
    "metadata": {},
    "outputs": [
@@ -414,7 +414,7 @@
        "Name: year, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "ca9b31f9",
    "metadata": {},
    "outputs": [
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "c55ed166",
    "metadata": {},
    "outputs": [
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "e060953f",
    "metadata": {},
    "outputs": [
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "d4da6a2a",
    "metadata": {},
    "outputs": [
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "60b28b33",
    "metadata": {
     "scrolled": true
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "5eab1bb7",
    "metadata": {
     "scrolled": true
@@ -635,7 +635,7 @@
        "Name: age, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "0fe8c371",
    "metadata": {},
    "outputs": [
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "id": "cbf37e78",
    "metadata": {},
    "outputs": [
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "id": "ae92bcae",
    "metadata": {},
    "outputs": [
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "id": "c626986a",
    "metadata": {},
    "outputs": [],
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "id": "d719e955",
    "metadata": {},
    "outputs": [
@@ -847,7 +847,7 @@
        "5                 296     3.006757"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "id": "2b98a7cd",
    "metadata": {},
    "outputs": [
@@ -868,7 +868,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "id": "30f046e2",
    "metadata": {},
    "outputs": [
@@ -989,7 +989,7 @@
        "843      4.476190                                 Rear Window (1954)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1013,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "id": "231fc17e",
    "metadata": {},
    "outputs": [],
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 22,
    "id": "c8e8255c",
    "metadata": {},
    "outputs": [
@@ -1106,7 +1106,7 @@
        "5                198     3.146465    1.132699"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1117,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 23,
    "id": "1a9a9356",
    "metadata": {},
    "outputs": [
@@ -1127,7 +1127,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1151,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 24,
    "id": "e58f4ea1",
    "metadata": {},
    "outputs": [
@@ -1161,7 +1161,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1185,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 25,
    "id": "4a9729cf",
    "metadata": {},
    "outputs": [
@@ -1195,7 +1195,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1228,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 26,
    "id": "0e5e2208",
    "metadata": {
     "scrolled": true
@@ -1310,7 +1310,7 @@
        "4        1      2355       5  978824291"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1321,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 27,
    "id": "65361d30",
    "metadata": {},
    "outputs": [],
@@ -1332,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 28,
    "id": "6e96a69d",
    "metadata": {},
    "outputs": [
@@ -1690,7 +1690,7 @@
        "[10 rows x 3706 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1701,7 +1701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 29,
    "id": "a353b1a8",
    "metadata": {},
    "outputs": [
@@ -1741,7 +1741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 30,
    "id": "1c0ba994",
    "metadata": {},
    "outputs": [],
@@ -1759,7 +1759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 31,
    "id": "f62274bc",
    "metadata": {},
    "outputs": [],
@@ -1774,7 +1774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 32,
    "id": "38826dea",
    "metadata": {},
    "outputs": [
@@ -1862,7 +1862,7 @@
        "6        2       c       5"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1878,7 +1878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 33,
    "id": "b831bd51",
    "metadata": {},
    "outputs": [
@@ -1954,7 +1954,7 @@
        "c          0.0  5.0  0.0"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1977,7 +1977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 34,
    "id": "e4044cef",
    "metadata": {
     "scrolled": true
@@ -1991,17 +1991,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 35,
    "id": "712d34bc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x7f7826e475f8>"
+       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x7f7d3a5365c0>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2017,10 +2017,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "ce78d579",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Item id 1 | predicted rating : 3.5919765146341134\n",
+      "Item id 3 | predicted rating : 3.8218535760771317\n"
+     ]
+    }
+   ],
    "source": [
     "# 학습한 모델을 기반으로 빈공간의 점수를 예측합니다.\n",
     "\n",
@@ -2042,10 +2051,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "c5db862f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Item id 1 | real rating : 2.0 | predicted rating : 3.5012953667425726\n",
+      "Item id 2 | real rating : 4.0 | predicted rating : 3.7987750736873753\n",
+      "Item id 3 | real rating : 4.0 | predicted rating : 3.706811743276569\n",
+      "Item id 1 | real rating : 2.0 | predicted rating : 3.559719178687615\n",
+      "Item id 2 | real rating : 5.0 | predicted rating : 3.842034977563095\n",
+      "Item id 3 | real rating : 4.0 | predicted rating : 3.710093349174041\n",
+      "Item id 2 | real rating : 5.0 | predicted rating : 3.952652686790717\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "build_testset() : \n",
@@ -2072,10 +2095,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "57dfd2b2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "training time of model: 79.42 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "# SVD 라이브러리를 사용하기 위한 학습 데이터를 생성합니다.\n",
     "reader = Reader(rating_scale=(1, 5))\n",
