kaggle_titanic_Complete0503

--- a/kaggle_titanic.ipynb
+++ b/kaggle_titanic.ipynb
@@ -1548,7 +1548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d311016",
+   "id": "324e8124",
    "metadata": {},
    "source": [
     "- Random Forests 사용시, 제일 높은 값을 확인"
@@ -1586,7 +1586,7 @@
    "id": "33ea4d23",
    "metadata": {},
    "source": [
-    "### Step 5 머신러닝 적용하기\n",
+    "### Step 5 kaggle 제출하기\n",
     "\n",
     "랜덤 포레스트가 가장 좋은 결과를 내는 것을 알 수 있다. 그 결과로 submission 파일을 만들어 제출해보자."
    ]
@@ -1614,7 +1614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1f0e761",
+   "id": "8ad545ca",
    "metadata": {},
    "source": [
     "#### kaggle 제출 결과"
@@ -1622,7 +1622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8935d1b4",
+   "id": "8efd3950",
    "metadata": {},
    "source": [
     "<center>\n",
@@ -1632,7 +1632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3101d69b",
+   "id": "c25b23e3",
    "metadata": {},
    "source": [
     "- 75점을 받았다."
