--- a/Chapter 5.2.ipynb
+++ b/Chapter 5.2.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 1,
    "id": "befa1358",
    "metadata": {},
    "outputs": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 2,
    "id": "96fdb0b8",
    "metadata": {},
    "outputs": [
@@ -198,7 +198,7 @@
        "4 2010-12-01 08:26:00       3.39      17850  United Kingdom  "
       ]
      },
-     "execution_count": 110,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 3,
    "id": "55055ebc",
    "metadata": {},
    "outputs": [
@@ -236,7 +236,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 4,
    "id": "9ba172de",
    "metadata": {},
    "outputs": [],
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 5,
    "id": "2c266178",
    "metadata": {},
    "outputs": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 6,
    "id": "66a597a1",
    "metadata": {},
    "outputs": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 7,
    "id": "42de1c02",
    "metadata": {},
    "outputs": [
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 8,
    "id": "2045a712",
    "metadata": {},
    "outputs": [],
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 9,
    "id": "5165b283",
    "metadata": {},
    "outputs": [
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 10,
    "id": "52657abc",
    "metadata": {},
    "outputs": [
@@ -488,7 +488,7 @@
        "2250      16274  United Kingdom         False  "
       ]
      },
-     "execution_count": 118,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 11,
    "id": "5793adeb",
    "metadata": {},
    "outputs": [],
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 12,
    "id": "1b636b74",
    "metadata": {},
    "outputs": [
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 13,
    "id": "6dc32ff1",
    "metadata": {},
    "outputs": [
@@ -575,7 +575,7 @@
        "<AxesSubplot:xlabel='date'>"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 14,
    "id": "41d2b21a",
    "metadata": {},
    "outputs": [
@@ -619,7 +619,7 @@
        "<AxesSubplot:xlabel='date'>"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 15,
    "id": "5bd07b76",
    "metadata": {},
    "outputs": [],
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 16,
    "id": "0876997b",
    "metadata": {},
    "outputs": [
@@ -674,7 +674,7 @@
        "<AxesSubplot:xlabel='date'>"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 17,
    "id": "c3050c5d",
    "metadata": {},
    "outputs": [
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 18,
    "id": "b35cbbd6",
    "metadata": {},
    "outputs": [
@@ -752,7 +752,7 @@
        "Name: InvoiceNo, dtype: float64"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 19,
    "id": "a8874f56",
    "metadata": {},
    "outputs": [
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 20,
    "id": "b617aafa",
    "metadata": {},
    "outputs": [
@@ -826,7 +826,7 @@
        "Name: StockCode, dtype: float64"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 21,
    "id": "c32f413d",
    "metadata": {},
    "outputs": [
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 22,
    "id": "a50acd7a",
    "metadata": {},
    "outputs": [
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 23,
    "id": "d3e155bd",
    "metadata": {},
    "outputs": [
@@ -926,7 +926,7 @@
        "Name: InvoiceNo, dtype: int64"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 24,
    "id": "fb38f859",
    "metadata": {},
    "outputs": [
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 25,
    "id": "9c85b0da",
    "metadata": {},
    "outputs": [
@@ -1004,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 26,
    "id": "e5ee3f03",
    "metadata": {},
    "outputs": [
@@ -1022,7 +1022,7 @@
        "Name: amount, dtype: float64"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1035,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 27,
    "id": "2e75d887",
    "metadata": {},
    "outputs": [
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 28,
    "id": "31bb42bb",
    "metadata": {},
    "outputs": [
@@ -1094,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 29,
    "id": "235b2fa1",
    "metadata": {},
    "outputs": [
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 30,
    "id": "e572ef18",
    "metadata": {},
    "outputs": [
@@ -1138,16 +1138,16 @@
      "text": [
       "CustomerID\n",
       "12346                                              {23166}\n",
-      "12347    {20719, 22728, 23170, 22805, 23147, 47580, 845...\n",
-      "12348    {21725, 21211, 21726, 21985, 21213, 23077, 849...\n",
-      "12350    {20652, 21864, 21915, 20615, 22348, 21866, 219...\n",
-      "12352    {21232, 22138, 22064, 21700, 21314, 22692, 226...\n",
+      "12347    {23508, 84558A, 23422, 85232D, 20719, 22374, 2...\n",
+      "12348    {22952, 21983, 21211, 21982, 22437, 23078, 226...\n",
+      "12350    {21832, 22412, 79191C, 21915, 22557, 22348, 22...\n",
+      "12352    {22138, 37495, 21380, 22423, 22701, 22617, 212...\n",
       "                               ...                        \n",
-      "18280    {22495, 22084, 82484, 22499, 22180, 22611, 227...\n",
-      "18281    {23209, 23007, 23008, 22028, 22037, 22467, 22716}\n",
-      "18282    {21108, 22089, 22424, 23187, 23295, 21109, 21270}\n",
-      "18283    {21232, 22411, 23209, 20886, 84997A, 21212, 20...\n",
-      "18287    {22866, 21232, 22064, 47422, 21823, 84584, 221...\n",
+      "18280    {22358, 22499, 22727, 82484, 22495, 22725, 220...\n",
+      "18281    {22037, 22716, 23007, 23008, 23209, 22467, 22028}\n",
+      "18282    {21270, 21108, 22424, 21109, 23295, 23187, 22089}\n",
+      "18283    {23351, 22952, 23508, 21240, 85152, 23350, 227...\n",
+      "18287    {47421, 21556, 22644, 23223, 22866, 85039B, 20...\n",
       "Name: StockCode, Length: 3970, dtype: object\n"
      ]
     }
@@ -1169,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 31,
    "id": "48f8520e",
    "metadata": {},
    "outputs": [
@@ -1177,7 +1177,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'12346': {'23166': 'old'}, '12347': {'20719': 'old', '22728': 'old', '23170': 'old', '22805': 'old'...\n"
+      "{'12346': {'23166': 'old'}, '12347': {'23508': 'old', '84558A': 'old', '23422': 'old', '85232D': 'ol...\n"
      ]
     }
    ],
@@ -1205,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 32,
    "id": "bdbf31b3",
    "metadata": {},
    "outputs": [
@@ -1214,17 +1214,17 @@
      "output_type": "stream",
      "text": [
       "CustomerID\n",
-      "12347    {21064, 23497, 23508, 23271, 21731, 84625A, 23...\n",
-      "12349    {22692, 22567, 22554, 84078A, 23497, 21563, 23...\n",
-      "12352    {23367, 23559, 23089, 22978, 23368, 22982, 226...\n",
+      "12347    {23508, 20719, 21265, 23084, 23497, 23552, 210...\n",
+      "12349    {22567, 20685, 23460, 23236, 48194, 21231, 226...\n",
+      "12352    {23559, 23368, 23089, 22178, 23096, 22982, 233...\n",
       "12356                                       {22423, 21843}\n",
-      "12357    {21232, 22190, 21116, 23197, 15056P, 23184, 22...\n",
+      "12357    {22312, 15056BL, 22983, 21116, 20677, 22814, 2...\n",
       "                               ...                        \n",
-      "18272    {23240, 23113, 23198, 22076, 22960, 23493, 234...\n",
+      "18272    {23236, 22076, 22666, 22722, 23198, 72799E, 22...\n",
       "18273                                             {79302M}\n",
-      "18274    {84988, 21108, 21974, 22423, 22720, 21231, 229...\n",
-      "18282                  {23175, 22818, 22699, 22423, 23174}\n",
-      "18283    {22411, 23209, 23582, 20727, 21212, 20719, 219...\n",
+      "18274    {21231, 21974, 84509A, 22851, 21108, 22989, 22...\n",
+      "18282                  {23175, 22423, 22699, 23174, 22818}\n",
+      "18283    {23351, 22952, 23508, 23381, 22411, 20719, 232...\n",
       "Name: StockCode, Length: 1880, dtype: object\n"
      ]
     }
@@ -1247,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 33,
    "id": "a105adf6",
    "metadata": {},
    "outputs": [
@@ -1255,7 +1255,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'12346': {'23166': 'old'}, '12347': {'21064': 'new', '23497': 'new', '23508': 'new', '23271': 'new'...\n"
+      "{'12346': {'23166': 'old'}, '12347': {'23508': 'new', '20719': 'new', '21265': 'new', '23084': 'new'...\n"
      ]
     }
    ],
@@ -1292,7 +1292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 34,
    "id": "bab53be8",
    "metadata": {},
    "outputs": [
@@ -1372,7 +1372,7 @@
        "4      12352   0  14    0"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1419,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 35,
    "id": "c566a42f",
    "metadata": {},
    "outputs": [
@@ -1457,7 +1457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 36,
    "id": "8fb4e326",
    "metadata": {},
    "outputs": [
@@ -1495,7 +1495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 37,
    "id": "4305cd4d",
    "metadata": {},
    "outputs": [
@@ -1525,7 +1525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 38,
    "id": "8ff6434a",
    "metadata": {},
    "outputs": [
@@ -1599,7 +1599,7 @@
        "4      12347     20719          3"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1620,7 +1620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 39,
    "id": "66c6c9e1",
    "metadata": {},
    "outputs": [
@@ -1630,7 +1630,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1663,7 +1663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 40,
    "id": "dfe8a43e",
    "metadata": {},
    "outputs": [
@@ -1673,7 +1673,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1706,7 +1706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 41,
    "id": "094722a4",
    "metadata": {},
    "outputs": [
@@ -1716,7 +1716,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1753,7 +1753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 42,
    "id": "b75f04d0",
    "metadata": {},
    "outputs": [
@@ -1788,46 +1788,46 @@
        "      <th>0</th>\n",
        "      <td>12346</td>\n",
        "      <td>23166</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>12347</td>\n",
        "      <td>16008</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>12347</td>\n",
        "      <td>17021</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>12347</td>\n",
        "      <td>20665</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>12347</td>\n",
        "      <td>20719</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2.048881</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  CustomerID StockCode  Rating\n",
-       "0      12346     23166     NaN\n",
-       "1      12347     16008     NaN\n",
-       "2      12347     17021     NaN\n",
-       "3      12347     20665     NaN\n",
-       "4      12347     20719     NaN"
+       "  CustomerID StockCode    Rating\n",
+       "0      12346     23166  1.000000\n",
+       "1      12347     16008  1.000000\n",
+       "2      12347     17021  1.000000\n",
+       "3      12347     20665  1.000000\n",
+       "4      12347     20719  2.048881"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1850,7 +1850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 43,
    "id": "ec2960f7",
    "metadata": {},
    "outputs": [
@@ -1858,18 +1858,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "training time of model: 32.99 seconds\n",
+      "training time of model: 33.57 seconds\n",
       "RMSE of test dataset in SVD model:\n",
-      "RMSE: nan\n"
+      "RMSE: 0.3355\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "nan"
+       "0.33545226955427915"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1911,7 +1911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": null,
    "id": "baa7a2cc",
    "metadata": {},
    "outputs": [],
@@ -1934,18 +1934,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": null,
    "id": "d15e0c6c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "training time of model: 36.47 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# SVD 라이브러리를 사용하기 위한 학습 데이터를 생성합니다. 11월 이전 전체를 full trainset으로 활용합니다.\n",
     "reader = Reader(rating_scale=(1, 5))\n",
@@ -1968,13 +1960,62 @@
    "id": "aedb9b3b",
    "metadata": {},
    "source": [
-    "### Step3 예측 평가: 상품 추천시뮬레이션하기"
+    "### Step3 예측 평가: 상품 추천시뮬레이션하기\n",
+    "\n",
+    "이번 단계에서는 앞서 학습한 SVD 모델을 활용하여 상품 추천 시뮬레이션을 수행해보자. 추천의 대상이 되는 유저는 11월 이전 데이터에 등장한 모든 유저를 대상으로 한다. 반면, 유저들에게 추천의 대상이 되는 상품은 아래의 3가지로 분류할 수 있다. 이 3가지 분류의 기준은 Step1에서 탐색했던 신규 구매/재구매에 대한 탐색을 기반으로 한 것이다.\n",
+    "- 이전에 구매한적 없던 상품 추천: 신규 구매를 타겟으로 하는 추천\n",
+    "- 이전에 구매했던 상품 추천: 재구매를 타겟으로 하는 추천\n",
+    "- 모든 상품을 대상으로 상품 추천: 모든 유저-상품의 점수를 고려하여 추천\n",
+    "다음 코드는 11월 이전의 데이터에 등장한 모든 유저와 해당 유저들이 이전에 구매한적 없던 상품들을 대상으로 한 예측 점수를 딕셔너리 형태로 추출하는 과정이다. 우선, 이전 코드에서 생성된 결과인 train_data에 build_anti_testset()함수를 적용하여 U-I-R 데이터에서 Rating이 0인 유저-상품 쌍을 test-data 변수로 추출한다. 이는 구매기록이 없는 유저-상품 쌍을 의미한다. 그리고 SVD모델의 tset()함수로 추천 대상이 되는 유저-상품의 Rating을 예측하고 이를 딕셔너리 형태로 추출한다. 딕셔너리의 형태는 다음 실행 결과에서 볼 수 있듯이{유저:{상품:점수,상품:점수...}}의 형태로 이루어져 있다.\n",
+    "- 첫 번째 추천 대상의 유저-상품 점수 추출하기"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "5e5a490f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 이전에 구매하지 않았던 상품을 예측의 대상으로 선정한다.\n",
+    "test_data = train_data.build_anti_testset()\n",
+    "target_user_predictions = model.test(test_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c522d36f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 구매 예측 결과를 딕셔너리 형태로 변환한다.\n",
+    "new_order_prediction_dict = {}\n",
+    "for customer_id, stock_code, _, predicted_rating, _ in target_user_predictions:\n",
+    "    if customer_id in new_order_prediction_dict:\n",
+    "        if stock_code in new_order_prediction_dict[customer_id]:\n",
+    "            pass\n",
+    "        else:\n",
+    "            new_order_prediction_dict[customer_id][stock_code] = predicted_rating\n",
+    "            else:\n",
+    "                new_order_prediction_dict[customer_id] = {}\n",
+    "                new_order_prediction_dict[customer_id][stock_code] = predicted_rating\n",
+    "                \n",
+    "print(str(new_order_prediction_dict)[:300] + \"...\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d2ce2dc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "044ccec7",
    "metadata": {},
    "outputs": [],
    "source": []
